<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="grunertm.calculator.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_c"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_plusminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_plusminus"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_euro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_euro"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_division"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_7"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_8"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_9"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_multiply"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_4"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_5"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_6"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_addition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_addition"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_1"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_2"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_3"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_op"
            android:text="@string/button_minus"
            android:onClick="onClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".20" >

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal|top"
            android:layout_weight=".5"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_0"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_nu"
            android:text="@string/button_dot"
            android:onClick="onClick" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight=".25"
            android:background="@drawable/button_custom_eq"
            android:text="@string/button_equals"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>